Truncate text to prevent overflow

--- a/project/meeting-summariser/src/components/Button/Button.css
+++ b/project/meeting-summariser/src/components/Button/Button.css
@@ -43,6 +43,7 @@
     position: fixed;
     margin-top: 330px;
     margin-left: 125px;
+    padding: 0 5px;
 }
 
 .remove_button{
@@ -105,4 +106,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.truncate-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
